--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <header>
-      <h1>Bus Mall Store</h1>
+      <h1>BUS MALL STORE</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
       <section class="deck col-1">
         <div class="card">
           <header>
-            <h1>Shop Our Catalog</h1>
+            <h2>Shop Our Catalog</h2>
           </header>
           <div class="copy">
             <ol>
